--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
+console = "0.16.1"
 dialoguer = "0.12.0"
 env_logger = "0.11.8"
 git2 = { version = "0.20.2" ,  features = ["vendored-libgit2", "vendored-openssl"]}
