--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ dialoguer = "0.12.0"
 env_logger = "0.11.8"
 git2 = { version = "0.20.2" ,  features = ["vendored-libgit2", "vendored-openssl"]}
 log = "0.4.29"
+
+[dev-dependencies]
+tempfile = "3.23.0"
